--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Vina+Sans&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+}
+
 html{
     font-size: 62.5%;
-    font-family: Tahoma, sans-serif;
+    font-family: NotoSansDisplay, Arial, sans-serif;
 }
 
 .nav-bar {
@@ -18,8 +24,24 @@ html{
     filter: brightness(100%);
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #EEE;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(0,0,0);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(0,0,0);
+}
+
 body{
-    background: #000;
+    background: #FFF;
     min-height: 100vh;
     max-width: 100vw;
 }
@@ -38,154 +60,339 @@ body-wrap{
     width: 100vw;
     min-height: 100vh;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)), url(../img/background.webp) center no-repeat;
+    background: #FFF;
     background-size: cover;
     position: fixed;
     margin: 0;
 }
 
 header{
+    z-index: 69;
     width: 100%;
     max-width: 100%;
     height: 10vh;
-    background: #eee;
+    background: rgb(223,0,0);
     box-shadow: 2px 2px 10px rgba(30,0,0,0.3);
     position: absolute;
     top: 0;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
     overflow: hidden;
 }
 
+.button-wrap{
+    margin-right: 2rem;
+    align-items: center;
+    width: 60%;
+    display: flex;
+    justify-content: right;
+    gap: 2vw;
+}
+
+.headerbutton{
+    color: #EEE;
+    text-decoration: none;
+    font-size: 2.5rem;
+}
+
+.headerbutton:hover{
+    text-decoration: underline;
+}
+
 .title-wrap{
-    width: 100%;
-    max-width: 100%;
+    margin-left: 0.5rem;
+    width: 40%;
     height: 100%;
     display: flex;
-    position: absolute;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
-header > div > h1{
-    color: #222;
-    font-size: 2.5vw;
+.title{
+    color: #EEE;
+    font-size: 3vw;
 }
 
 .logo-wrap{
-    z-index: 69;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo{
-    object-fit: contain;
-    height: 100%;
-
+    height: 90%;
 }
 
-.itemtopbar{
+#itemtopbar{
+    margin-top: 0vh;
     width: 100%;
-    height: 10vh;
+    height: 5vh;
     transform: translateY(10vh);
     display: flex;
-    justify-content: right;
+    justify-content: left;
     z-index: 99;
+    transition: height 0.5s linear;
 }
 
-form{
+.orderbywrap{
+    width: 13%;
+    display: flex;
+    flex-direction: column;
+}
+
+#buttonsortwrap{
+    width: 100%;
+    height: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 20%;
-    z-index: 69;
+    font-size: 2rem;
+    margin-top: 3vh;
+    transition: margin-top 0.5s linear;
 }
 
-select{
-    margin-right: 4rem;
-    height: 60%;
-    width: 80%;
-    font-size: 2vw;
-    border-radius: 5px;
-    background: rgba(255,255,255,0.3);
-    border: 1px solid #333;
+#opensortalgo{
+    cursor: pointer;
     outline: none;
+    border: none;
+    width: 50%;
+    height: 50%;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    z-index: 69;
+    background: rgba(0,0,0,0);
 }
 
-option{
-    background: #EEE;
+#opensortalgo:hover{
+    color: #961F3B;
+}
+
+#opensortalgo-arrow{
+    font-family: 'Vina Sans', cursive;
+    font-size: 2.5rem;
+    rotate: 90deg;
+    transition: rotate 0.5s linear;
+}
+
+form{
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 60%;
+    width: 100%;
+    z-index: 69;
+    gap: 5%;
+    transition: opacity 0.5s linear;
+}
+
+input{
+    text-align: center;
+    height: 20%;
+    width: 100%;
+    outline: none;
+    border: none;
+    background: rgba(0,0,0,0);
+    font-size: 2rem;
+    transition: font-size 0.2s linear;
+}
+
+input:hover{
+    font-size: 2.2rem;
+    color: #961F3B;
+
+}
+
+.slogansection{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../img/sloganback.webp) center no-repeat;
+    background-size: cover;
+    margin: 0;
+    display: flex;
+    position: relative;
+    justify-content: left;
+}
+
+.slogan-text-wrap{
+    margin-left: 20vh;
+    width: 40%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    justify-content: center;
+    align-items: left;
+
+}
+
+.slogan-text{
+    color: #EEE;
+    font-size: 4rem;
+}
+
+.slogan-text > span{
+    color: #ffc739;
+}
+
+.heading{
+    margin-top: 5vh;
+    width: 100%;
+    height: 70vh;
+    display: flex;
+}
+
+.heading-image-wrap{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.heading-image-wrap-wrap{
+    height: 85%;
+    aspect-ratio: 1;
+    margin-left: 5%;
+    overflow: hidden;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.heading-image{
+    height: 100%;
+    object-fit: cover;
+}
+
+.heading-text-wrap{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.inner-heading-text-wrap{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.heading-title{
+    color: #000;
+    font-size: 6rem;
+}
+
+.heading-desc{
+    margin-top: 3rem;
+    color: #333;
+    font-size: 4rem;
+}
+
+
+.button-class{
+    width: 20vw;
+    height: 10vh;
+    cursor: pointer;
+    user-select: none;
+    background: rgb(0,0,0);
+    outline: none;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    font-size: 3rem;
 }
 
 .items{
-    margin-top: 15vh;
-    margin-bottom: 15vh;
+    margin-top: 12.5vh;
+    margin-bottom: 12.5vh;
     display: grid;
     justify-content: center;
     align-content: center;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 0.7rem;
+    gap: 3rem;
     width: 100%;
 }
 
 .item-card{
-    background: #eee;
+    overflow: hidden;
+    box-shadow: 0px 0px 2px rgba(30,0,0,0.1);
+    cursor: pointer;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    border-radius: 5px;
+    border: 1px solid rgb(228, 228, 228);
     aspect-ratio: 1/1.5;
-    width: 23.5vw;
-    box-shadow: 2px 3px 10px rgba(30,0,0,0.3);
+    width: 21vw;
+    animation-fill-mode: forwards;
+    animation: itemcardanim 0.3s linear;
+}
+
+.item-text-wrap{
+    margin-left: 5%;
+    display: flex;
+    flex-direction: column;
+    height: 35%;
+    justify-content: space-between;
 }
 
 .item-text{
     margin-left: 1rem;
     color: #333;
-    transition: font-size 0.3s;
+    transition: font-size 0.3s, color 0.3s;
+    animation: itemtextanim 1s linear;
 }
 
 .item-name{
     margin-top: 1rem;
-    font-size: 2.5rem;
+    font-size: 1.75vw;
 }
 
 .item-price{
-    font-size: 1.5rem;
+    font-size: 1.6vw;
 }
 
 .item-img-wrap{
-    margin: 0 auto;
+    padding-top: 2rem;
     width: 100%;
-    height: 85%;
+    height: 60%;
+    top: 5%;
     overflow: hidden;
-    transition: height 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .item-img{
-    height: 110%;
-    object-position: center center;
-    transition: height 0.3s, transform 0.3s;
+    height: 100%;
+    aspect-ratio: 1;
+    object-fit: cover;
 }
 
-.item-img-wrap:hover > .item-img{
-    height: 120%;
-    transform: translate(-5%,-10%);
+.item-card:hover > .item-text-wrap > .item-name{
+    color: #961F3B;
+    font-size: 2vw;
 }
 
-.item-img-wrap:hover{
-    height: 82.5%;
+*{
+    user-select: none;
 }
-
-.item-img-wrap:hover + .item-name{
-    font-size: 3rem;
-}
-
-
 
 .footer{
     width: 100%;
     height: 10vh;
-    background: #eee;
+    background: #DDD;
     box-shadow: -2px -2px 10px rgba(30,0,0,0.3);
     display: flex;
     flex-direction: column;
@@ -200,17 +407,42 @@ option{
     padding-right: 1rem;
 }
 
+.footer > a{
+    padding-right: 1rem;
+    color: black;
+    text-decoration: none;
+}
+
+.footer > a:hover{
+    text-decoration: underline;
+}
+
 .footer > h3:nth-child(1) {
     padding-top: 1rem;
 }
 
 @media screen and (max-width: 850px) {
-    h1{
+    .orderbywrap{
+        opacity: 0;
+    }
+    .title{
         font-size: 3vw;
     }
 
     .item-card{
         width: 40vw;
+    }
+    .item-name{
+        font-size: 3vw;
+    }
+
+    .item-card:hover > .item-text-wrap > .item-name{
+        color: #961F3B;
+        font-size: 3.5vw;
+    }
+
+    .item-price{
+        font-size: 2.5vw;
     }
 
     .items{
@@ -218,11 +450,112 @@ option{
     }
 }
 
+.item-wrap{
+    margin-top: 12.5vh;
+    display: flex;
+    flex-direction: column;
+    height: 120vh;
+    width: 100%;
+}
+
+.item-top-wrap{
+    height: 60%;
+    width: 100%;
+    display: flex;
+    justify-content: left;
+}
+
+.item-bottom-wrap{
+    margin-top: 10vh;
+    margin-left: 4vh;
+    height: 40%;
+    width: 80%;
+}
+
+.item-img-page-wrap{
+    transform: translateX(-4vw);
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.item-selection-wrap-wrap{
+    position: relative;
+    width: 55%;
+    height: 100%;
+    display: flex;
+}
+
+.item-selection-wrap{
+    position: absolute;
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: 3vh;
+}
+
+.item-page-img{
+    height: 95%;
+    aspect-ratio: 1;
+    object-fit: cover;
+}
+
+.item-page-title{
+    font-size: 5rem;
+}
+
+.item-page-price{
+    font-size: 3rem;
+}
+
+.item-description{
+    font-size: 2.5rem;
+}
+
+.add-to-cart{
+    margin-top: 10vh;
+    background: rgb(223,0,0);
+    
+}
+
+.cart-wrap{
+    transform: translateX(-5vh);
+    margin-top: 3vh;
+    z-index: 69;
+    height: 12.5%;
+    background: red;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    position: absolute;
+    right: 1rem;
+    transition: filter 0.2s, height 0.2s;
+}
+
+.cart{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    object-fit: contain;
+    height: 90%;
+
+}
+
+.cart-wrap:hover > .cart{
+    height: 92%;
+
+}
+
 @media screen and (max-width: 600px) {
-    header > form{
+    .bottomheader > form{
         padding-right: 2rem;
     }
-    .logo{
+    .title{
         opacity: 0;
     }
     
@@ -254,15 +587,51 @@ option{
         font-size: 5.5vw;
     }
 
+    .item-card:hover > .item-text-wrap > .item-name{
+        color: #961F3B;
+        font-size: 6vw;
+    }
+
     .item-price{
         font-size: 4.5vw;
     }
-    header > div{
+    .bottomheader > div{
         padding: 1rem;
         justify-content: left;
     }
 
-    header > div > h1{
+    .title{
         font-size: 4vw;
+    }
+}
+
+@keyframes itemcardanim{
+    0%{
+        transform: translateY(4rem);
+        opacity: 0;
+        
+    }
+
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes itemtextanim{
+    0%{
+        transform: translateX(-5rem);
+        opacity: 0;
+        
+    }
+
+    80%{
+        transform: translateX(-5rem);
+        opacity: 0;
+    }
+
+    100%{
+        transform: translateY(0);
+        opacity: 1;
     }
 }
