--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Vina+Sans&display=swap');
 
 *{
+    user-select: none;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -46,7 +47,7 @@ body{
     max-width: 100vw;
 }
 
-body-wrap{
+main{
     max-width: 100vw;
     min-height: 100vh;
     display: flex;
@@ -65,6 +66,8 @@ body-wrap{
     position: fixed;
     margin: 0;
 }
+
+/*header*/
 
 header{
     z-index: 69;
@@ -124,6 +127,287 @@ header{
 .logo{
     height: 90%;
 }
+
+/*footer*/
+
+.footer{
+    width: 100%;
+    height: 10vh;
+    background: #DDD;
+    box-shadow: -2px -2px 10px rgba(30,0,0,0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    position: relative;
+    line-height: 1.8rem;
+    bottom: 0px;
+    margin-top: 45vh;
+}
+
+.footer > h3{
+    padding-right: 1rem;
+}
+
+.footer > a{
+    padding-right: 1rem;
+    color: black;
+    text-decoration: none;
+}
+
+.footer > a:hover{
+    text-decoration: underline;
+}
+
+.footer > h3:nth-child(1) {
+    padding-top: 1rem;
+}
+
+/*Home page*/
+
+.slogansection{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../img/sloganback.webp) center no-repeat;
+    background-size: cover;
+    margin: 0;
+    display: flex;
+    position: relative;
+    justify-content: left;
+}
+
+.slogan-text-wrap{
+    margin-left: 20vh;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    justify-content: center;
+    align-items: left;
+
+}
+
+.slogan-text{
+    color: #EEE;
+    font-size: 4rem;
+}
+
+.slogan-text > span{
+    color: #ffc739;
+}
+
+.heading{
+    margin-top: 5vh;
+    width: 100%;
+    height: 70vh;
+    display: flex;
+}
+
+.heading-image-wrap{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.heading-image-wrap-wrap{
+    height: 85%;
+    aspect-ratio: 1;
+    margin-left: 5%;
+    overflow: hidden;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.heading-image{
+    height: 100%;
+    object-fit: cover;
+}
+
+.heading-text-wrap{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.inner-heading-text-wrap{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.heading-title{
+    color: #000;
+    font-size: 6rem;
+}
+
+.heading-desc{
+    margin-top: 3rem;
+    color: #333;
+    font-size: 4rem;
+}
+
+.button-class{
+    width: 20vw;
+    height: 10vh;
+    cursor: pointer;
+    user-select: none;
+    background: rgb(0,0,0);
+    outline: none;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    font-size: 3rem;
+}
+
+.featured-items-wrap{
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.featured-item{
+    height: 60%;
+    aspect-ratio: 1;
+    background: rgb(125, 125, 125);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.featured-item:hover > .featured-item-img{
+    height: 105%;
+}
+
+.featured-item-img{
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+    transition: height 0.2s;
+}
+
+.steps-wrap{
+    margin-top: 20vh;
+    width: 90%;
+    height: 60vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0;
+}
+
+.step-wrap{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+.step-img{
+    height: 40%;
+    object-fit: contain;
+}
+
+.step-title{
+    font-size: 2vw;
+}
+
+.step-desc{
+    font-size: 1vw;
+}
+
+.coolitem-wrap{
+    margin-top: 20vh;
+    width: 100%;
+    height: 70vh;
+    display: flex;
+}
+
+.coolitem-image-wrap{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+.coolitem-image-wrap-wrap{
+    height: 85%;
+    aspect-ratio: 1;
+    margin-right: 5%;
+    overflow: hidden;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.coolitem-image{
+    height: 100%;
+    object-fit: cover;
+}
+
+.coolitem-text-wrap{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10%;
+
+}
+
+.inner-coolitem-text-wrap{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.reviews{
+    width: 100vw;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+}
+
+.review-wrap{
+    width: 20%;
+    aspect-ratio: 1 / 1.5;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.review-user-img{
+
+}
+
+.review-username{
+    font-size: 2vw;
+}
+
+.review-stars{
+
+}
+
+.review-desc{
+    font-size: 1vw;
+}
+
+/*Products page*/
 
 #itemtopbar{
     margin-top: 0vh;
@@ -209,110 +493,6 @@ input:hover{
 
 }
 
-.slogansection{
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../img/sloganback.webp) center no-repeat;
-    background-size: cover;
-    margin: 0;
-    display: flex;
-    position: relative;
-    justify-content: left;
-}
-
-.slogan-text-wrap{
-    margin-left: 20vh;
-    width: 40%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 5rem;
-    justify-content: center;
-    align-items: left;
-
-}
-
-.slogan-text{
-    color: #EEE;
-    font-size: 4rem;
-}
-
-.slogan-text > span{
-    color: #ffc739;
-}
-
-.heading{
-    margin-top: 5vh;
-    width: 100%;
-    height: 70vh;
-    display: flex;
-}
-
-.heading-image-wrap{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-}
-
-.heading-image-wrap-wrap{
-    height: 85%;
-    aspect-ratio: 1;
-    margin-left: 5%;
-    overflow: hidden;
-    background: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.heading-image{
-    height: 100%;
-    object-fit: cover;
-}
-
-.heading-text-wrap{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.inner-heading-text-wrap{
-    width: 100%;
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-}
-
-.heading-title{
-    color: #000;
-    font-size: 6rem;
-}
-
-.heading-desc{
-    margin-top: 3rem;
-    color: #333;
-    font-size: 4rem;
-}
-
-
-.button-class{
-    width: 20vw;
-    height: 10vh;
-    cursor: pointer;
-    user-select: none;
-    background: rgb(0,0,0);
-    outline: none;
-    border: none;
-    color: white;
-    border-radius: 5px;
-    font-size: 3rem;
-}
-
 .items{
     margin-top: 12.5vh;
     margin-bottom: 12.5vh;
@@ -385,70 +565,7 @@ input:hover{
     font-size: 2vw;
 }
 
-*{
-    user-select: none;
-}
-
-.footer{
-    width: 100%;
-    height: 10vh;
-    background: #DDD;
-    box-shadow: -2px -2px 10px rgba(30,0,0,0.3);
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    position: relative;
-    line-height: 1.8rem;
-    bottom: 0px;
-    margin-top: 45vh;
-}
-
-.footer > h3{
-    padding-right: 1rem;
-}
-
-.footer > a{
-    padding-right: 1rem;
-    color: black;
-    text-decoration: none;
-}
-
-.footer > a:hover{
-    text-decoration: underline;
-}
-
-.footer > h3:nth-child(1) {
-    padding-top: 1rem;
-}
-
-@media screen and (max-width: 850px) {
-    .orderbywrap{
-        opacity: 0;
-    }
-    .title{
-        font-size: 3vw;
-    }
-
-    .item-card{
-        width: 40vw;
-    }
-    .item-name{
-        font-size: 3vw;
-    }
-
-    .item-card:hover > .item-text-wrap > .item-name{
-        color: #961F3B;
-        font-size: 3.5vw;
-    }
-
-    .item-price{
-        font-size: 2.5vw;
-    }
-
-    .items{
-        grid-template-columns: 1fr 1fr;
-    }
-}
+/*Item page*/
 
 .item-wrap{
     margin-top: 12.5vh;
@@ -549,6 +666,35 @@ input:hover{
 .cart-wrap:hover > .cart{
     height: 92%;
 
+}
+
+@media screen and (max-width: 850px) {
+    .orderbywrap{
+        opacity: 0;
+    }
+    .title{
+        font-size: 3vw;
+    }
+
+    .item-card{
+        width: 40vw;
+    }
+    .item-name{
+        font-size: 3vw;
+    }
+
+    .item-card:hover > .item-text-wrap > .item-name{
+        color: #961F3B;
+        font-size: 3.5vw;
+    }
+
+    .item-price{
+        font-size: 2.5vw;
+    }
+
+    .items{
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media screen and (max-width: 600px) {
