--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -757,7 +757,7 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
 }
 
 .shopping-product-title{
@@ -769,11 +769,13 @@ form{
 }
 
 .shopping-product-amount{
-    margin-left: 15%;
-    height: 40%;
-    aspect-ratio: 1;
-    font-size: 4rem;
+    font-size: 5rem;
     text-align: center;
+    width: 10%;
+}
+
+.remove-item{
+    width: 20%;
 }
 
 @media screen and (max-width: 850px) {
