--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 a{
@@ -712,6 +713,30 @@ form{
     transition: filter 0.2s, height 0.2s;
 }
 
+.cart-display-wrap-wrap{
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.cart-display-wrap{
+    border-radius: 50%;
+    background: black;
+    color: white;
+    aspect-ratio: 1;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+#cart-content-display{
+    font-size: 2rem;
+}
+
 .cart{
     position: absolute;
     left: 50%;
@@ -719,12 +744,41 @@ form{
     transform: translate(-50%,-50%);
     object-fit: contain;
     height: 90%;
+    z-index: -2;
 
 }
 
 .cart-wrap:hover > .cart{
     height: 92%;
 
+}
+
+.recommended-items-wrap{
+    width: 50%;
+    height: 50%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: left;
+    align-items: center;
+    gap: 5%;
+}
+
+.recommended-item{
+    aspect-ratio: 1;
+    min-width: 25%;
+    border-radius: 50%;
+    border: 1px solid black;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    > img{
+        height: 70%;
+        overflow: hidden;
+        object-fit: contain;
+        object-position: center center;
+    }
 }
 
 /*Shopping cart page*/
@@ -776,6 +830,10 @@ form{
 
 .remove-item{
     width: 20%;
+}
+
+.wiggleclass{
+    animation: wiggle 0.2s infinite linear;
 }
 
 @media screen and (max-width: 850px) {
@@ -890,4 +948,22 @@ form{
         transform: translateY(0);
         opacity: 1;
     }
+}
+
+@keyframes wiggle{
+    0%{
+        rotate: 0deg;
+    }
+    33%{
+        rotate: -25deg;
+    }
+    66%{
+        rotate: 25deg;
+        font-size: 2.5rem;
+    }
+    99%{
+        font-size: 2rem;
+        rotate: 0deg;
+    }
+    
 }
